[package]
name = "xancode"
version = "0.1.0"
edition = "2024"
authors = ["Xanthorrhizol <xanthorrhizol@proton.me>"]
description = "My simple encoder"
repository = "https://github.com/Xanthorrhizol/xancode"
readme = "README.md"
license = "MIT"
keywords = ["encoder", "encode", "decode", "codec"]

[workspace]
members = ["macros"]
resolver = "3"

[dependencies]
bytes = "1"
xancode_macros = { path = "macros", version = "0.1.1" }
